# custom-prefect-result

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yaml
src/cpr/: Resource.py  Serializer.py  Target.py  _version.py
src/cpr/csv/: CSVSource.py  CSVTarget.py
src/cpr/image/: ImageSource.py  ImageTarget.py  Metadata.py
src/cpr/numpy/: NumpySource.py  NumpyTarget.py
src/cpr/utilities/: utilities.py
src/cpr/zarr/: ZarrSource.py
tests/: test_csv.py  test_image.py  test_numpy.py  test_utilities.py  test_zarr.py
