[metadata]
name = cpr
description = Custom Prefect Result (CPR) enables task-run result caching in Prefect, while keeping the result data in any file-format e.g. tiff-file for image data or csv-file for tabular data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/cpr
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/fmi-faim/cpr/issues
    Documentation = https://github.com/fmi-faim/cpr#README.md
    Source Code = https://github.com/fmi-faim/cpr
    User Support = https://github.com/fmi-faim/cpr/issues

[options]
packages = find:
install_requires =
    imagecodecs
    numpy
    ome-zarr
    pandas
    prefect
    tifffile
    xxhash
    zarr
python_requires = >=3.8
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
